<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
        <parent>
            <groupId>org.sonatype.oss</groupId>
            <artifactId>oss-parent</artifactId>
            <version>7</version>
        </parent>


    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                      <groupId>org.sonatype.plugins</groupId>
                      <artifactId>nexus-staging-maven-plugin</artifactId>
                      <version>1.6.9</version>
                      <extensions>false</extensions>
                      <configuration>
                         <serverId>ossrh</serverId>
                         <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                         <autoReleaseAfterClose>true</autoReleaseAfterClose>
                      </configuration>
                    </plugin>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-javadoc-plugin</artifactId>
                  <version>2.9</version>
                  <executions>
                    <execution>
                      <id>attach-javadocs</id>
                      <goals>
                        <goal>jar</goal>
                      </goals>
                      <configuration>
                        <additionalparam>-Xdoclint:none</additionalparam>
                      </configuration>
                    </execution>
                  </executions>
                </plugin>
                <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-source-plugin</artifactId>
                      <version>2.2.1</version>
                      <executions>
                        <execution>
                          <id>attach-sources</id>
                          <goals>
                            <goal>jar-no-fork</goal>
                          </goals>
                        </execution>
                      </executions>
                </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <distributionManagement>
      <snapshotRepository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      </snapshotRepository>
      <repository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
    </distributionManagement>
  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <source>11</source>
                <target>11</target>
            </configuration>
        </plugin>
    </plugins>
  </build>
  <groupId>com.github.venkatramanm.swf-all</groupId>
  <artifactId>swf-all</artifactId>
  <packaging>pom</packaging>
  <name>swf-all</name>
  <description>All components of succinct web framework</description>
  <url>http://www.succinct.in</url>
  <version>2.11-SNAPSHOT</version>
  <licenses>
    <license>
      <name>MIT</name>
      <url>LICENSE.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:venkatramanm/swf-all.git</connection>
    <developerConnection>scm:git:git@github.com:venkatramanm/swf-all.git</developerConnection>
    <url>https://github.com/venkatramanm/swf-all/tree/master</url>
  </scm>
  <developers>
    <developer>
      <id>venky</id>
      <name>Venkatraman Mahadevan</name>
      <email>venky@succinct.in</email>
    </developer>
  </developers>
  <modules>
    <module>swf-db</module>
    <module>swf-db-io-xml</module>
    <module>swf-db-io-json</module>
    <module>swf-db-io-xls</module>
    <module>swf</module>
    <module>swf-archetype</module>
    <module>swf-plugin-archetype</module>
    <module>swf-maven-plugin</module>
    <module>swf-plugin-templates</module>
    <module>swf-plugin-collab</module>
    <module>swf-plugin-bugs</module>
    <module>swf-plugin-mail</module>
    <module>swf-plugin-datamart</module>
    <module>swf-plugin-hivemq</module>
    <module>swf-plugin-nats</module>
  </modules>
</project>
